Changes to menu bar

--- a/src/app/questions/questions.component.scss
+++ b/src/app/questions/questions.component.scss
@@ -3,6 +3,7 @@
         margin: 200px auto; 
         display: flex;
 				justify-content: center;
+        background-color: bisque;
 			        
 }
 
