--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -12,6 +12,8 @@
 </div>
 <div class="center">
   <a routerLink="/welcome">
-    <button mat-raised-button color="primary" class="btn btn-primary">Choose another quiz</button>
+    <p>Thanks for participating in assessment.</p>
+    <p>An email will be sent to let you know if you have made it to the invterview or not.</p>
+    <button mat-raised-button color="primary" class="btn btn-primary">Choose another language</button>
   </a>
 </div>
